<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSurface"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/wallpaper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/login_screen_wallpaper"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/junglee_wallpaper" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/BigHeadline"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            style="@style/BigSubhead"
            android:text="@string/tagline_all_lower" />

        <Button
            android:id="@+id/logInButton"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/long_button"
            android:text="@string/log_in_all_caps"/>

        <Button
            android:id="@+id/signUpButton"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/long_button"
            android:text="@string/sign_up_all_caps"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>