<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorSurface"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="12dp">

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="6dp"
            android:background="@color/colorSurface"
            android:contentDescription="@string/plant_thumbnail_image_button"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_fiddle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plant_name_default"
            style="@style/PlantNameThumbnail"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/species_default"
            style="@style/SubheadThumbnail"/>



    </LinearLayout>

</androidx.cardview.widget.CardView>