<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="3dp"
    android:layout_marginBottom="5dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSurfaceLight"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/profilePicture"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:layout_marginVertical="4dp"
            android:contentDescription="@string/profile_picture"
            app:srcCompat="@drawable/ic_friends"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/username_filler"
            style="@style/ListItem"
            android:clickable="true"
            android:layout_weight="4"/>

        <ImageButton
            android:id="@+id/addFriendButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_add_circle_24"
            android:contentDescription="@string/add_friend_button"
            android:background="@color/colorSurfaceLight"
            android:layout_weight="1"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>