<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSurface">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/menuBar"
            android:label=""
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorSurface"
            app:titleTextColor="@color/colorSurface"
            app:menu="@menu/profile_options_menu"/>

        <LinearLayout
            android:id="@+id/userProfileContent"
            android:layout_below="@id/menuBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="bottom">

            <ImageView
                android:id="@+id/profilePicture"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginBottom="6dp"
                android:src="@drawable/profile_pic_default"
                android:contentDescription="@string/profile_picture"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_filler"
                style="@style/ActivityTitleDark"
                android:layout_gravity="center"
                />

            <TextView
                android:id="@+id/followersPlantsCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plants_followers_default"
                style="@style/Detail"
                android:layout_gravity="center"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorTextLight"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="24dp"
                android:layout_gravity="center"/>

        </LinearLayout>



        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/plantListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/userProfileContent"/>

        <com.mirandadayadkins.junglee.navbar.NavBarView
            android:id="@+id/navigationBar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>